<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tic Tac Toe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="play_with_android">Game with Android</string>
    <string name="two_playars">Two Playars</string>

    <string name="internet_sever">InetServer</string>
    <string name="internet_client">InetClient</string>

    <string name="str_list_title">--- Chat ---</string>



    <string name="new_game">New Game</string>
    <string name="settings">Settings</string>
    <string name="text"> </string>





    <string name="exit">Выход</string>
    <string name="save_data">Сохранить данные?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="cancel">Отмена</string>
    <string name="saved">Сохранено</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="connect_to_game">Connect to game</string>







    <string name="settings_title">settings</string>

    <string name="settings_music">Music</string>
    <string name="settings_sounds">Sounds</string>
    <string name="settings_welcome_screen">Welcome screen</string>

    <string name="level_one">Level 1</string>
    <string name="level_two">Level 2</string>
    <string name="level_three">Level 3</string>

    <string name="online">Online</string>
    <string name="exit_main">Exit</string>
    <string name="zero">0</string>
    <string name="back">Back</string>
    <string name="player2">player2</string>
    <string name="player1">player1</string>





    

</resources>
