<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/background"
    android:focusable="false">


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:foregroundGravity="center_vertical|center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:text="@string/play_with_android"
                android:id="@+id/play_with_android"
                android:textSize="15dp"
                android:background="@drawable/button_background"
                android:textColor="#ffffffff"
                android:onClick="onClick"
                android:focusable="false" />

            <Button
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:text="@string/two_playars"
                android:id="@+id/two_players"
                android:background="@drawable/button_background"
                android:layout_marginTop="10dp"
                android:textColor="#ffffffff"
                android:textSize="15dp"
                android:onClick="onClick"/>

            <Button
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:text="@string/online"
                android:id="@+id/online"
                android:background="@drawable/button_background"
                android:layout_marginTop="10dp"
                android:textColor="#ffffffff"
                android:textSize="15dp" />

            <Button
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:text="@string/bluetooth"
                android:id="@+id/bluetooth"
                android:background="@drawable/button_background"
                android:layout_marginTop="10dp"
                android:textColor="#ffffffff"
                android:textSize="15dp"
                android:onClick="onClick"/>

            <Button
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:text="@string/settings"
                android:id="@+id/setings"
                android:background="@drawable/button_background"
                android:layout_marginTop="10dp"
                android:textColor="#ffffffff"
                android:textSize="15dp"
                android:onClick="onClick"/>

            <Button
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:text="@string/exit_main"
                android:id="@+id/exit"
                android:background="@drawable/button_background"
                android:layout_marginTop="10dp"
                android:textColor="#ffffffff"
                android:textSize="15dp"
                android:onClick="onClick" />

        </LinearLayout>
    </FrameLayout>
</RelativeLayout>
