<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:clipChildren="false"
    android:background="@color/background">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="205dp"
        android:id="@+id/game">

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/listWithDevicess"
            android:layout_gravity="center" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/game"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <ProgressBar

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/progressBar"
                        android:layout_gravity="center_horizontal"
                        android:visibility="invisible"/>

                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp" >

                        <Button
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:text="@string/new_game"
                            android:id="@+id/newGame"
                            android:onClick="onClick"
                            android:background="@drawable/button_background"
                            android:textColor="#ffffffff"
                            android:layout_weight="1"
                            android:layout_marginRight="10dp"
                            android:layout_marginLeft="10dp" />

                        <Button
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:text="@string/connect_to_game"
                            android:id="@+id/connectToGame"
                            android:onClick="onClick"
                            android:background="@drawable/button_background"
                            android:textColor="#ffffffff"
                            android:layout_weight="1"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:id="@+id/frameLayout2"
        >

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/imageView23"
            android:layout_gravity="left|center"
            android:src="@drawable/ic_bluetooth_searching_black_48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:layout_gravity="left|center"
            android:textSize="25dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="#2979FF"
            android:layout_marginLeft="50dp"
            android:text="@string/bluetooth" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text"
        android:layout_gravity="left|center_vertical"
        android:textSize="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#FF0728" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/settings"
        android:onClick="onClick"
        android:layout_alignBottom="@+id/text"
        android:layout_alignRight="@+id/frameLayout2"
        android:layout_alignEnd="@+id/frameLayout2"
        android:src="@drawable/ic_settings_black_48dp"
        android:background="@drawable/button_background" />


</RelativeLayout>
