<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:clipChildren="false"
    android:background="@color/background">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:background="@drawable/bec2"
        android:id="@+id/game">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="left|top">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/imageView1"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:onClick="onClick"/>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/imageView2"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:onClick="onClick"/>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/imageView3"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:onClick="onClick"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" >

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/imageView4"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:onClick="onClick"/>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/imageView5"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:onClick="onClick"/>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/imageView6"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:onClick="onClick"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" >

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/imageView7"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:onClick="onClick"/>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/imageView8"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:onClick="onClick"/>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/imageView9"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:onClick="onClick"
                    />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/game"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    >

                    <LinearLayout
                        android:id="@+id/frameLayout_player1"
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"></LinearLayout>

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:id="@+id/icon_with_you"
                        android:layout_gravity="right"
                        android:background="@drawable/ic_face_black_48dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:id="@+id/text_scote_player1"
                        android:layout_gravity="center_vertical|right"
                        android:layout_marginRight="50dp"
                        android:textSize="30dp" />

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:id="@+id/im_play_player1"
                        android:layout_gravity="left|center_vertical"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/player1"
                        android:id="@+id/text_player1"
                        android:layout_gravity="center"
                        android:textSize="20dp"
                        android:textColor="#ff000000" />

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" >

                <Button
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:text="@string/new_game"
                    android:id="@+id/newGame"
                    android:onClick="onClick"
                    android:background="@drawable/button_background"
                    android:textColor="#ffffffff"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:text="@string/back"
                    android:id="@+id/back"
                    android:onClick="onClick"
                    android:background="@drawable/button_background"
                    android:textColor="#ffffffff"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:id="@+id/frameLayout"
        >

        <LinearLayout
            android:id="@+id/frameLayout_player2"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></LinearLayout>

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/icon_with_android"
            android:layout_gravity="left|center_vertical"
            android:background="@drawable/ic_face_black_48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:id="@+id/text_scote_player2"
            android:layout_gravity="left|center_vertical"
            android:textSize="30dp"
            android:layout_marginLeft="50dp" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/im_play_plaer2"
            android:layout_gravity="right|center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player2"
            android:id="@+id/text_player2"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:textColor="#ff000000" />

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text"
        android:layout_gravity="left|center_vertical"
        android:textSize="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#FF0728" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/settings"
        android:onClick="onClick"
        android:layout_alignBottom="@+id/text"
        android:layout_alignRight="@+id/frameLayout"
        android:layout_alignEnd="@+id/frameLayout"
        android:src="@drawable/ic_settings_black_48dp"
        android:background="@drawable/button_background" />


</RelativeLayout>
